--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,6 +3,9 @@
 body{
     margin:0;
     font-family: 'Open Sans', sans-serif;
+    background-repeat: no-repeat;
+    min-height: 800px;
+    background: radial-gradient(closest-side, #e2e2e2, #e7e6e6, #868585);
 }
 
 .first-page-content{
@@ -27,7 +30,7 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
-/*First PAGE*/
+/*INSTRUCTION PAGE*/
 
 #container{
     margin: 0 auto;
@@ -41,4 +44,27 @@ h1{
 h4{
     font-size: 1.5rem;
     margin:0;
+}
+
+/*FIRST PAGE */
+h3{
+    padding:.2rem;
+    margin:0;
+    background-color: white;
+}
+.container{
+    
+    width:28%;
+    margin:7rem auto;
+}
+.square{
+    margin:0 auto;
+    border:.3rem black solid;
+    width:34%;
+    height:8.8rem;
+    margin:-1.8rem;
+    display: inline-block;
+    background-color: blue;
+    border-radius: 100%;
+
 }
