--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,45 +7,73 @@ body{
     min-height: 800px;
     background: radial-gradient(closest-side, #e2e2e2, #e7e6e6, #868585);
 }
-
-.first-page-content{
+.instructionContent{
+    margin-top:2rem;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
 }
-.firstPage-img{
-    width:18rem;
-    height:18rem;
-    margin-bottom:0;
-    box-shadow: 12rem;
+.allBalls{
+    margin:0 auto 1.3rem auto;
+    display: block;
 }
-.firstPage-h2{
-    font-size: 3rem;
-    font-family: 'Courier New', Courier, monospace;
-    margin: 0 0 .7rem 0;
+.fRound{
+    width:6rem;
+    height:6rem;
+    border:.2rem solid rgb(29, 28, 28);
+    border-radius: 50%;
+    margin:0 auto -1.5rem auto;
 }
-.first-page-button{
+.round{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    margin:-.5rem;
+    width:6rem;
+    height:6rem;
+    border:.2rem solid rgb(29, 28, 28);
+    border-radius: 50%;
+}
+/* .start{
+    border: #868585 solid .1rem;
+    padding:1rem 2rem ;
+    margin-top:1rem;
     text-decoration: none;
-    border:1px solid grey;
-    padding:.9rem;
-    font-family: 'Open Sans', sans-serif;
+} */
+
+.start {
+    padding:.8rem 2rem;
+    background-color:rgb(89, 131, 124) ;
+    margin-top:1rem;
+    color:white;
+    border:none;
+    border-radius: 25%;
+    text-decoration: none;
+    animation-name: stretch;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
 }
 
-/*INSTRUCTION PAGE*/
+@keyframes stretch {
+    0% {
+        transform: scale(.1);
+    }
 
-#content{
-    margin: 0 auto;
-    text-align: center;
-}
-h1{
-    font-size: 2.7rem;
-    margin-top: 6rem;
-    margin-bottom:0;
-}
-h4{
-    font-size: 1.5rem;
-    margin:0;
+    50% {
+        transform: scale(1.0);
+        background-color:skyblue;
+        border-radius: 25%;
+    }
 }
 
+
+
+
+.content{
+    margin-top:3rem;
+    line-height: .4rem;
+}
 /*FIRST PAGE */
 h3{
     padding:.2rem;
